// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataVersionSelect renders correctly 1`] = `
<div
  className="version-item"
>
  <div
    className="info-medium-gray mb-2"
  >
    Current Version
  </div>
  <div
    className="info-medium-blue open-modal"
    onClick={[Function]}
  >
    March 31 2001 - 04:00 PM
  </div>
  <Modal
    autoFocus={true}
    backdrop={true}
    backdropTransitionTimeout={150}
    fade={true}
    isOpen={false}
    keyboard={true}
    modalTransitionTimeout={300}
    toggle={[Function]}
    zIndex={1050}
  >
    <ModalHeader
      tag="h4"
      toggle={[Function]}
      wrapTag="div"
    >
      <div
        className=""
      >
        Dataset Versions
      </div>
    </ModalHeader>
    <ModalBody
      tag="div"
    >
      <div
        className="scolling-list"
      >
        <div
          className="version-disabled"
          onClick={[Function]}
        >
          <div
            className="version-text-disabled list-test-class"
          >
            July 10 2017 - 09:57 AM
          </div>
        </div>
        <div
          className="version-disabled"
          onClick={[Function]}
        >
          <div
            className="version-text-disabled list-test-class"
          >
            June 10 2017 - 09:57 AM
          </div>
        </div>
        <div
          className="version-disabled"
          onClick={[Function]}
        >
          <div
            className="version-text-disabled list-test-class"
          >
            May 10 2017 - 09:57 AM
          </div>
        </div>
        <div
          className="version-active "
          onClick={[Function]}
        >
          <div
            className="version-text-active list-test-class"
          >
            April 10 2017 - 09:57 AM
          </div>
        </div>
        <div
          className="version-disabled"
          onClick={[Function]}
        >
          <div
            className="version-text-disabled list-test-class"
          >
            March 10 2017 - 09:57 AM
          </div>
        </div>
      </div>
    </ModalBody>
    <ModalFooter
      tag="div"
    >
      <Button
        className="button-blue action-button"
        color="secondary"
        onClick={[Function]}
        tag="button"
      >
        Cancel
      </Button>
      <Button
        className="button-blue action-button"
        color="secondary"
        onClick={[Function]}
        tag="button"
      >
        OK
      </Button>
    </ModalFooter>
  </Modal>
</div>
`;

exports[`DataVersionSelect renders correctly 2`] = `
<div
  className="version-item"
>
  <div
    className="info-medium-gray mb-2"
  >
    Current Version
  </div>
  <div
    className="info-medium-blue open-modal"
    onClick={[Function]}
  >
    March 31 2001 - 04:00 PM
  </div>
  <Modal
    autoFocus={true}
    backdrop={true}
    backdropTransitionTimeout={150}
    fade={true}
    isOpen={true}
    keyboard={true}
    modalTransitionTimeout={300}
    toggle={[Function]}
    zIndex={1050}
  >
    <ModalHeader
      tag="h4"
      toggle={[Function]}
      wrapTag="div"
    >
      <div
        className=""
      >
        Dataset Versions
      </div>
    </ModalHeader>
    <ModalBody
      tag="div"
    >
      <div
        className="scolling-list"
      >
        <div
          className="version-disabled"
          onClick={[Function]}
        >
          <div
            className="version-text-disabled list-test-class"
          >
            July 10 2017 - 09:57 AM
          </div>
        </div>
        <div
          className="version-disabled"
          onClick={[Function]}
        >
          <div
            className="version-text-disabled list-test-class"
          >
            June 10 2017 - 09:57 AM
          </div>
        </div>
        <div
          className="version-disabled"
          onClick={[Function]}
        >
          <div
            className="version-text-disabled list-test-class"
          >
            May 10 2017 - 09:57 AM
          </div>
        </div>
        <div
          className="version-active "
          onClick={[Function]}
        >
          <div
            className="version-text-active list-test-class"
          >
            April 10 2017 - 09:57 AM
          </div>
        </div>
        <div
          className="version-disabled"
          onClick={[Function]}
        >
          <div
            className="version-text-disabled list-test-class"
          >
            March 10 2017 - 09:57 AM
          </div>
        </div>
      </div>
    </ModalBody>
    <ModalFooter
      tag="div"
    >
      <Button
        className="button-blue action-button"
        color="secondary"
        onClick={[Function]}
        tag="button"
      >
        Cancel
      </Button>
      <Button
        className="button-blue action-button"
        color="secondary"
        onClick={[Function]}
        tag="button"
      >
        OK
      </Button>
    </ModalFooter>
  </Modal>
</div>
`;
